--- a/html/ejercicio2.html
+++ b/html/ejercicio2.html
@@ -33,7 +33,7 @@
 
     <blockquote>“El elemento HTML &lt;blockquote&gt; indica que el texto dentro de él es una cita larga.”</blockquote>
 
-    <a href="https://keine-byte.github.io/Taller-practico-1/">Volver a la pagina principal</a>
+    <a href="../index.html">Volver a la pagina principal</a>
 </body>
 
 </html>
